quick fixed supplemental size does not fit for embedded view

--- a/styles.css
+++ b/styles.css
@@ -1002,7 +1002,7 @@ p.errormessage {color: #8c1515;
 	top: 25px;
 	left: 0;
 	width: 93%;
-	height: 69%;
+	height: 71%;
 	z-index: 9999;
 	margin:0px 2% auto 3%;
 	border: 4px solid #8A887D;
